--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "created by sukhiboi and abhilash",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "nyc mocha"
   },
   "keywords": [
