--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "sukhiboi, abhilash",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "express": "^4.17.1",
     "mocha": "^8.0.1",
