--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "eslint": "^7.3.1",
     "express": "^4.17.1",
     "mocha": "^8.0.1",
     "nyc": "^15.1.0",
