updated server with redis

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "cSpell.words": [
         "Listr",
-        "eslintignore"
+        "brpop",
+        "eslintignore",
+        "hgetall",
+        "hset",
+        "lpush"
     ]
 }
