--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "created by sukhiboi",
   "main": "index.js",
   "scripts": {
-    "server": "node server.js",
+    "start": "node server.js",
     "test": "mocha"
   },
   "keywords": [
