--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "directories": {
     "test": "test"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "morgan": "^1.10.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sukhiboi/ci-tool.git"
