--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
     "eslint": "^7.3.1",
     "express": "^4.17.1",
     "mocha": "^8.0.1",
+    "morgan": "^1.10.0",
     "redis": "^3.0.2"
   },
   "directories": {
     "test": "test"
-  },
-  "devDependencies": {
-    "morgan": "^1.10.0"
   },
   "repository": {
     "type": "git",
