refactored job object based on thte job object

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "hgetall",
         "hmset",
         "hset",
-        "lpush"
+        "lpush",
+        "sadd",
+        "scard"
     ]
 }
